2022-07-25  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 2.4.
	* doc/gendocs_template: Likewise.
	* NEWS: Add entries for 2.4.

2022-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/mbr.pk (MBR_CHS): Use unnammed type for the `cs' field.

2022-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map-tab.y (make_map_entry): Set condition_loc.
	(tagged_value): Use location of DATA for the tag's location.
	* poke/pk-map-parser.h (struct pk_map_parsed_entry): New field
	condition_loc.
	(PK_MAP_PARSED_ENTRY_CONDITION_LOC): Define.
	(PK_MAP_NOLOC): Define.
	* poke/pk-map.c (pk_map_load_parsed_map): Use
	pk_compile_buffer_with_loc and pk_compile_expression_with_loc.

2022-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.c (pk_cmd_exec): Use pk_compile_statement_with_loc
	and pk_compile_buffer_with_loc.

2022-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-diag.c (pkl_warning): Use <unknown> for unknown
	source/location.
	(pkl_error_internal): Likewise.

2022-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-parser.h: Add location info to pkl_parse_buffer.
	(struct pkl_parser): Add fields init_line and init_column.
	* libpoke/pkl-parser.c (pkl_parse_buffer): Likewise.
	(pkl_parse_buffer): Fix initial location to 1:1 instead of 0:0.
	* libpoke/pkl.h: Add location info to pkl_execute_buffer.
	Add location info to pkl_execute_expression.
	Add location info to pkl_execute_statement.
	* libpoke/pkl.c (pkl_execute_buffer): Likewise.
	(pkl_execute_statement): Likewise.
	(pkl_execute_expression): Likewise.
	* libpoke/libpoke.h: Prototype for pk_compile_buffer_with_loc.
	Prototype for pk_compile_statement_with_loc.
	Prototype for pk_compile_expression_with_loc.
	* libpoke/libpoke.c (pk_compile_buffer_with_loc): New function.
	(pk_compile_buffer): Reimplement in terms of
	pk_compile_buffer_with_loc.
	(pk_compile_statement_with_loc): New function.
	(pk_compile_statement): Reimplement in terms of