@@ -1,3 +1,14 @@
+2022-09-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-lex.l (IS): Add lower-case b to `IS' definition.
+	(Integer literal rule): Accept lower-case b as a valid suffix.
+	* doc/learn-poke-language-in-y-minutes.pk: Add a line about integer
+	suffixes.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+	* testsuite/poke.pkl/integers-8.pk: New test.
+	* testsuite/poke.pkl/integers-9.pk: Likewise.
+	* testsuite/poke.pkl/integers-10.pk: Likewise.
+
 2022-07-25  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* configure.ac: Bump version to 2.4.
